@@ -16,7 +16,7 @@ module Spec
         @instance = @class.new
         @stub = Object.new
       end
-      
+
       [:stub!, :stub].each do |method|
         context "using #{method}" do
           it "should return expected value when expected message is received" do
@@ -55,7 +55,7 @@ module Spec
         @instance.msg1.should == 1
         @instance.msg2.should == 2
       end
-      
+
       it "should clear itself when verified" do
         @instance.stub!(:this_should_go).and_return(:blah)
         @instance.this_should_go.should == :blah
@@ -90,7 +90,7 @@ module Spec
         @instance.rspec_verify
         @instance.existing_instance_method.should equal(:original_value)
       end
-      
+
       it "should revert to original class method if there is one" do
         @class.existing_class_method.should equal(:original_value)
         @class.stub!(:existing_class_method).and_return(:mock_value)
@@ -115,7 +115,7 @@ module Spec
         current_value.should == [:yielded_value, :another_value]
         @instance.rspec_verify
       end
-      
+
       it "should yield a specified object and return another specified object" do
         yielded_obj = mock("my mock")
         yielded_obj.should_receive(:foo).with(:bar)
@@ -129,12 +129,12 @@ module Spec
           @mock.something
         end.should throw_symbol(:up)
       end
-      
+
       it "should override a pre-existing stub" do
         @stub.stub!(:existing_instance_method).and_return(:updated_stub_value)
         @stub.existing_instance_method.should == :updated_stub_value
       end
-      
+
       it "should limit " do
         @stub.stub!(:foo).with("bar")
         @stub.should_receive(:foo).with("baz")
@@ -148,7 +148,7 @@ module Spec
         @mock.rspec_verify
       end
     end
-    
+
     describe "A method stub with args" do
       before(:each) do
         @stub = Object.new
@@ -188,9 +188,14 @@ module Spec
           @stub.foo("other")
         end.should raise_error
       end
-      
+
       it "should support options" do
         @stub.stub!(:foo, :expected_from => "bar")
+      end
+
+      it "should use 'Stub' in the failure message" do
+        stub = stub('name')
+        expect {stub.foo}.to raise_error(/Stub 'name' received/)
       end
     end
 
