@@ -6,6 +6,7 @@
   * friendly mock argument expectation failure message (Tim Harper). Closes
     #868.
   * added double() as alias for stub() and mock()
+  * failure messages for doubles, mocks and stubs use the right name
 
 * not really a bug fix or enhancement
   * temporarily moved heckle feature to features-pending (waiting to see what
